--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -15,7 +15,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="create_recipe.html">Create Recipe</a>
+            <a class="nav-link" href="createRecipe.html">Create Recipe</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="userProfile.html">
