--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -6,6 +6,10 @@
   <title>Home - Recipe Sharing App</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/homePage.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   
 </head>
 <body>
@@ -31,71 +35,18 @@
   <div class="container">
     <div class="row mt-4">
       <div class="col">
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <a class="nav-link active" id="popular-tab" data-toggle="tab" href="#popular" role="tab" aria-controls="popular" aria-selected="true">Popular</a>
-          </li>
-          <li class="nav-item" role="presentation">
-            <a class="nav-link" id="dietary-preference-tab" data-toggle="tab" href="#dietary-preference" role="tab" aria-controls="dietary-preference" aria-selected="false">Dietary Preference</a>
-          </li>
-          <li class="nav-item" role="presentation">
-            <a class="nav-link" id="interests-tab" data-toggle="tab" href="#interests" role="tab" aria-controls="interests" aria-selected="false">Interests</a>
-          </li>
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#popular">Popular Recipes</a></li>
+          <li><a data-toggle="tab" href="#dietaryPreferences">Recipes based on Dietary Preference</a></li>
+          <li><a data-toggle="tab" href="#interests">Recipes based on interests</a></li>
         </ul>
-        <div class="tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="popular" role="tabpanel" aria-labelledby="popular-tab">
-            <!-- Content for popular recipes tab -->
-            <!-- Add your content here -->
-            <h2>Popular Recipes</h2>
-            <div class="custom-block bg-white shadow-lg recipe-info">
-                <a href="">
-                    <div class="d-flex">
-                        <div>
-                            <h5 class="mb-2">Recipe Name</h5>
-
-                            <p class="mb-0">Recipe Description.</p>
-                        </div>
-                    </div>
-
-                    <img src="images/appetizer.png" class="custom-block-image img-fluid" alt="">
-                </a>
-            </div>
+      
+        <div class="tab-content">
+          <div id="popular" class="tab-pane fade in active">
           </div>
-          <div class="tab-pane fade" id="dietary-preference" role="tabpanel" aria-labelledby="dietary-preference-tab">
-            <!-- Content for recipes based on dietary preference tab -->
-            <!-- Add your content here -->
-            <h2>Recipes based on Dietary Preference</h2>
-            <div class="custom-block bg-white shadow-lg recipe-info">
-                <a href="">
-                    <div class="d-flex">
-                        <div>
-                            <h5 class="mb-2">Recipe Name</h5>
-
-                            <p class="mb-0">Recipe Description.</p>
-                        </div>
-                    </div>
-
-                    <img src="images/appetizer.png" class="custom-block-image img-fluid" alt="">
-                </a>
-            </div>
+          <div id="dietaryPreferences" class="tab-pane fade">
           </div>
-          <div class="tab-pane fade" id="interests" role="tabpanel" aria-labelledby="interests-tab">
-            <!-- Content for recipes based on interests tab -->
-            <!-- Add your content here -->
-            <h2>Recipes based on Interests</h2>
-            <div class="custom-block bg-white shadow-lg recipe-info">
-                <a href="">
-                    <div class="d-flex">
-                        <div>
-                            <h5 class="mb-2">Recipe Name</h5>
-
-                            <p class="mb-0">Recipe Description.</p>
-                        </div>
-                    </div>
-
-                    <img src="images/appetizer.png" class="custom-block-image img-fluid" alt="">
-                </a>
-            </div>
+          <div id="interests" class="tab-pane fade">
           </div>
         </div>
       </div>
@@ -105,5 +56,6 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
 </body>
 </html>
