Updated recipe page

--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -16,8 +16,14 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="#">Recipe Sharing</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search Recipes" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="createRecipe.html">Create Recipe</a>
           </li>
@@ -31,6 +37,8 @@
       </div>
     </div>
   </nav>
+  
+  
 
   <div class="container">
     <div class="row mt-4">
