Image upload functionality, cooking time, icons and other style changes

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,8 +6,16 @@
   <title>Recipe Sharing App - Login</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
+<style>
+  .logo{
+    font-family: 'Roboto', sans-serif;
+  }
+</style>
 <body>
+  <p class="h1 text-center logo"><img src="./images/chef.png" alt="Icon" width="48" height="48"></i>&nbspRecipe Sharing App</p>
 <div class="overlay"></div>
 <div class="login-container">
   <h2>Login</h2>
