--- a/frontend/recipePage.html
+++ b/frontend/recipePage.html
@@ -16,7 +16,7 @@
                     <h2 id="recipeName">Recipe Name</h2>
                 </div>
                 <div class="col-auto">
-                    <p>Cooking Time: 20 minutes</p>
+                    <p id="cookingTime"></p>
                 </div>
             </div>
             <div class="row">
