--- a/frontend/createRecipe.html
+++ b/frontend/createRecipe.html
@@ -6,6 +6,8 @@
   <title>Create Recipe - Recipe Sharing App</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-storage-compat.js"></script>
 
 </head>
 <body>
