--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -15,17 +15,17 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">Recipe Sharing</a>
+      <p class="h4"><strong><img src="./images/chef.png" alt="Icon" width="48" height="48"></i>&nbspRecipe Sharing App</p></strong>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search Recipes" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><img src="./images/search.png" alt="Icon" width="20" height="20">&nbspSearch</button>
             </form>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="createRecipe.html">Create Recipe</a>
+            <a class="nav-link" href="createRecipe.html"><img src="./images/create.png" alt="Icon" width="20" height="20">&nbspCreate Recipe</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="userProfile.html">
@@ -44,17 +44,17 @@
     <div class="row mt-4">
       <div class="col">
         <ul class="nav nav-tabs">
-          <li class="active"><a data-toggle="tab" href="#popular">Popular Recipes</a></li>
-          <li><a data-toggle="tab" href="#dietaryPreferences">Recipes based on Dietary Preference</a></li>
-          <li><a data-toggle="tab" href="#interests">Recipes based on interests</a></li>
+          <li class="active"><a data-toggle="tab" href="#popular" class="tab"><img src="./images/popular.png" alt="Icon" width="20" height="20">&nbspPopular Recipes</a></li>
+          <li><a data-toggle="tab" class="tab" href="#dietaryPreferences"><img src="./images/preference.png" alt="Icon" width="20" height="20">&nbspRecipes based on Dietary Preference</a></li>
+          <li><a data-toggle="tab" class="tab" href="#interests"><img src="./images/interests.png" alt="Icon" width="20" height="20">&nbspRecipes based on interests</a></li>
         </ul>
       
         <div class="tab-content">
-          <div id="popular" class="tab-pane fade in active">
+          <div id="popular" class="mt-2 tab-pane fade in active">
           </div>
-          <div id="dietaryPreferences" class="tab-pane fade">
+          <div id="dietaryPreferences" class="mt-2 tab-pane fade">
           </div>
-          <div id="interests" class="tab-pane fade">
+          <div id="interests" class="mt-2 tab-pane fade">
           </div>
         </div>
       </div>
