--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -20,12 +20,14 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search Recipes" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><img src="./images/search.png" alt="Icon" width="20" height="20">&nbspSearch</button>
+              <input class="form-control mr-sm-2" type="search" placeholder="Search Recipes" aria-label="Search" id="searchInput">
+              <button class="btn btn-outline-success my-2 my-sm-0" onclick="navigateToSearchPage(event)"><img src="./images/search.png" alt="Icon" width="20" height="20">&nbspSearch</button>
             </form>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="createRecipe.html"><img src="./images/create.png" alt="Icon" width="20" height="20">&nbspCreate Recipe</a>
+            <button class="btn btn-outline-success">
+              <a class="hideLink" href="createRecipe.html"><img src="./images/create.png" alt="Icon" width="20" height="20">&nbspCreate Recipe</a>
+            </button>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="userProfile.html">
