Fetching reviews from API

--- a/frontend/recipePage.html
+++ b/frontend/recipePage.html
@@ -78,48 +78,8 @@
             <div class="row mt-3">
                 <div class="col">
                     <h3>Reviews</h3>
-                    <ul class="list-group">
+                    <ul id="reviewList" class="list-group">
                         <!-- Reviews will be dynamically added here -->
-                        <li class="list-group-item">
-                            <div style="display: flex; align-items: center;">
-                                <img src="images/user.png" alt="User Profile Picture" class="mr-2" style="width: 40px; height: 40px; border-radius: 50%;">
-                                <h5>John Doe</h5>
-                                <span class="pt-2 mr-2 pr-2" style="position: absolute; top: 0; right: 0;">3 stars</span>
-                            </div><br/>                         
-                            <p>Delicious and easy to make!</p>
-                        </li>
-                        <li class="list-group-item">
-                            <div style="display: flex; align-items: center;">
-                                <img src="images/user.png" alt="User Profile Picture" class="mr-2" style="width: 40px; height: 40px; border-radius: 50%;">
-                                <h5>Brett Lee</h5>
-                                <span class="pt-2 mr-2 pr-2" style="position: absolute; top: 0; right: 0;">3 stars</span>
-                            </div><br/>                         
-                            <p>Very tasty!</p>
-                        </li>
-                        <li class="list-group-item">
-                            <div style="display: flex; align-items: center;">
-                                <img src="images/user.png" alt="User Profile Picture" class="mr-2" style="width: 40px; height: 40px; border-radius: 50%;">
-                                <h5>Arya Stark</h5>
-                                <span class="pt-2 mr-2 pr-2" style="position: absolute; top: 0; right: 0;">1 stars</span>
-                            </div><br/>                         
-                            <p>Didn't like the recipe. Turned out bad.</p>
-                        </li>
-                        <li class="list-group-item">
-                            <div style="display: flex; align-items: center;">
-                                <img src="images/user.png" alt="User Profile Picture" class="mr-2" style="width: 40px; height: 40px; border-radius: 50%;">
-                                <h5>Akshay Kumar</h5>
-                                <span class="pt-2 mr-2 pr-2" style="position: absolute; top: 0; right: 0;">5 stars</span>
-                            </div><br/>                         
-                            <p>Simple recipe. My family loved it!</p>
-                        </li>
-                        <li class="list-group-item">
-                            <div style="display: flex; align-items: center;">
-                                <img src="images/user.png" alt="User Profile Picture" class="mr-2" style="width: 40px; height: 40px; border-radius: 50%;">
-                                <h5>Ajitesh</h5>
-                                <span class="pt-2 mr-2 pr-2" style="position: absolute; top: 0; right: 0;">2 stars</span>
-                            </div><br/>                         
-                            <p>Didn't like it</p>
-                        </li>
                     </ul>
                 </div>
             </div>
