Recipe edit option added

--- a/frontend/homePage.html
+++ b/frontend/homePage.html
@@ -48,7 +48,7 @@
         <ul class="nav nav-tabs">
           <li class="active"><a data-toggle="tab" href="#popular" class="tab"><img src="./images/popular.png" alt="Icon" width="20" height="20">&nbspPopular Recipes</a></li>
           <li><a data-toggle="tab" class="tab" href="#dietaryPreferences"><img src="./images/preference.png" alt="Icon" width="20" height="20">&nbspRecipes based on Dietary Preference</a></li>
-          <li><a data-toggle="tab" class="tab" href="#interests"><img src="./images/interests.png" alt="Icon" width="20" height="20">&nbspRecipes based on interests</a></li>
+          <li><a data-toggle="tab" class="tab" href="#interests"><img src="./images/interests.png" alt="Icon" width="20" height="20">&nbspFollowed categories</a></li>
         </ul>
       
         <div class="tab-content">
