Update to User Profile page

--- a/frontend/userProfile.html
+++ b/frontend/userProfile.html
@@ -24,15 +24,15 @@
         <form class="mt-2" id="profileForm">
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" placeholder="Username" value = "John Doe" readonly>
+                <input type="text" class="form-control" id="username" placeholder="Username" value = "James Anderson" readonly>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Email" value = "johndoe@email.com" readonly>
+                <input type="email" class="form-control" id="email" placeholder="Email" value = "janderson@gmail.com" readonly>
             </div>
             <div class="form-group">
                 <label for="bio">Bio</label>
-                <textarea class="form-control" id="bio" rows="3" readonly>I enjoy making food and love to get to know about deserts from around the world</textarea>
+                <textarea class="form-control" id="bio" rows="3" readonly>I enjoy cooking and love to find new recipes</textarea>
             </div>
             <div class="form-group">
                 <label for="allergy">Allergy Info</label>
